sign up and login completed

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -7,6 +7,24 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
+// .separator {
+//     display: flex;
+//     flex-basis: 100%;
+//     align-items: center;
+//     color: rgba(0, 0, 0, 0.35);
+//     margin: 8px 0px;
+//     &::before,
+//     &::after {
+//         content: "";
+//         flex-grow: 1;
+//         background: rgba(0, 0, 0, 0.35);
+//         height: 1px;
+//         font-size: 0px;
+//         line-height: 0px;
+//         margin: 0px 8px;
+//     }
+// }
+
 h1 {
     font-size: 24px;
     font-weight: 700;
