--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -7,8 +7,89 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+    &:hover {
+        text-decoration: none;
+        color: black;
+    }
+}
+.back-btn {
+    position: absolute;
+    top: 1.5em;
+    left: 1em;
+    &:hover {
+        background-color: rgba(211, 211, 211, 0.2);
+    }
+}
+
+// TYPOGRAPHY
 h1 {
     font-size: 24px;
     font-weight: 700;
     line-height: 31.25px;
+}
+h3 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
+}
+h6 {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+}
+
+// BOTTOM NAV
+.bottom-nav {
+    position: fixed;
+    left: 50%;
+    bottom: 3%;
+    transform: translate(-50%, 3%);
+    width: 90%;
+    border-radius: 12px;
+    box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.1);
+    @media only screen and (min-width: 768px) {
+        width: 35em;
+    }
+    @media only screen and (min-width: 1200px) {
+        width: 50em;
+    }
+    .nav-active {
+        path {
+            fill: #5555fd;
+        }
+    }
+}
+
+// DASHBOARD PAGE - MENTOR LIST
+.dashboard {
+    .mentors {
+        .picture {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            border-radius: 100%;
+        }
+        &:hover {
+            background-color: rgba(211, 211, 211, 0.2);
+            border-radius: 12px;
+        }
+    }
+}
+
+// MENTOR PROFILE PAGE
+.mentor-profile {
+    img {
+        border-radius: 100%;
+    }
+    .title {
+        font-weight: 500;
+        font-size: 14px;
+    }
+    .intro {
+        font-weight: 400;
+        font-size: 14px;
+    }
 }
