--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -21,10 +21,14 @@ a:hover {
   position: absolute;
   top: 1.5em;
   left: 1em;
+  z-index: 999;
+  padding: 1em 0.5em;
+  border-radius: 6px;
 }
 
 .back-btn:hover {
   background-color: rgba(211, 211, 211, 0.2);
+  cursor: pointer;
 }
 
 h1 {
@@ -46,7 +50,11 @@ h6 {
 }
 
 .bottom-nav {
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   position: fixed;
+  z-index: 999;
   left: 50%;
   bottom: 3%;
   -webkit-transform: translate(-50%, 3%);
@@ -70,7 +78,11 @@ h6 {
 }
 
 .bottom-nav .nav-active path {
-  fill: #5555fd;
+  fill: #3498ff;
+}
+
+.bottom-nav .nav-active small {
+  color: #3498ff;
 }
 
 .dashboard .mentors .picture {
@@ -98,5 +110,20 @@ h6 {
 .mentor-profile .intro {
   font-weight: 400;
   font-size: 14px;
+}
+
+.sessions .session-info {
+  border: 1px solid #e5e5ea;
+  border-radius: 6px;
+}
+
+.sessions .session-info .mentor-info img {
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+}
+
+.sessions .session-info .join {
+  border-top: 1px solid #e5e5ea;
 }
 /*# sourceMappingURL=custom.css.map */
