--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -37,6 +37,12 @@ h1 {
   line-height: 31.25px;
 }
 
+h2 {
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 27.34px;
+}
+
 h3 {
   font-size: 18px;
   font-weight: 500;
@@ -125,5 +131,48 @@ h6 {
 
 .sessions .session-info .join {
   border-top: 1px solid #e5e5ea;
+}
+
+.join .user-img {
+  width: 259px;
+  height: 236px;
+  border-radius: 6px;
+}
+
+.join .mentor-img {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+}
+
+.join .mentor-name span {
+  font-weight: 700;
+}
+
+.meeting {
+  width: 100vw;
+  height: 100vh;
+  background-color: #191919;
+}
+
+.meeting video {
+  width: inherit;
+  height: inherit;
+}
+
+.meeting .controller {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: var(--white);
+  width: 100%;
+  height: 5em;
+  z-index: 9999;
+}
+
+.meeting .controller .wrapper {
+  width: 50%;
+  height: inherit;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=custom.css.map */
