--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -34,6 +34,11 @@ h1 {
     font-weight: 700;
     line-height: 31.25px;
 }
+h2 {
+    font-size: 21px;
+    font-weight: 500;
+    line-height: 27.34px;
+}
 h3 {
     font-size: 18px;
     font-weight: 500;
@@ -118,6 +123,48 @@ h6 {
         }
         .join {
             border-top: 1px solid #e5e5ea;
+        }
+    }
+}
+
+// MEETING PAGE
+.join {
+    .user-img {
+        width: 259px;
+        height: 236px;
+        border-radius: 6px;
+    }
+    .mentor-img {
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+    }
+    .mentor-name {
+        span {
+            font-weight: 700;
+        }
+    }
+}
+.meeting {
+    width: 100vw;
+    height: 100vh;
+    background-color: #191919;
+    video {
+        width: inherit;
+        height: inherit;
+    }
+    .controller {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: var(--white);
+        width: 100%;
+        height: 5em;
+        z-index: 9999;
+        .wrapper {
+            width: 50%;
+            height: inherit;
+            margin: 0 auto;
         }
     }
 }
